--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "typescript": "5.9.3"
   },
   "dependencies": {
+    "@fastify/swagger": "9.6.1",
+    "@fastify/swagger-ui": "5.2.5",
     "@prisma/adapter-pg": "7.3.0",
     "@prisma/client": "7.3.0",
     "bcryptjs": "3.0.3",
