--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "typescript": "5.9.3"
   },
   "dependencies": {
+    "@fastify/multipart": "9.4.0",
+    "@fastify/static": "^9.0.0",
     "@fastify/swagger": "9.6.1",
     "@fastify/swagger-ui": "5.2.5",
     "@prisma/adapter-pg": "7.3.0",
