--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "typescript": "5.9.3"
   },
   "dependencies": {
+    "@fastify/cookie": "11.0.2",
+    "@fastify/jwt": "10.0.0",
     "@fastify/multipart": "9.4.0",
     "@fastify/static": "^9.0.0",
     "@fastify/swagger": "9.6.1",
