--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "dev:down": "docker compose down",
     "migrate:dev": "npx prisma migrate dev",
     "generate": "npx prisma generate",
-    "test": "vitest run",
-    "test:watch": "vitest"
+    "test": "vitest run --project unit",
+    "test:e2e": "vitest run --project e2e",
+    "test:watch": "vitest --project unit",
+    "test:e2e:watch": "vitest --project e2e"
   },
   "repository": {
     "type": "git",
@@ -28,12 +30,15 @@
   "devDependencies": {
     "@types/node": "25.2.0",
     "@types/pg": "8.16.0",
+    "@types/supertest": "6.0.3",
     "dotenv": "17.2.3",
     "eslint": "9.39.2",
     "prisma": "7.3.0",
+    "supertest": "7.2.2",
     "tsup": "8.5.1",
     "tsx": "4.21.0",
     "typescript": "5.9.3",
+    "vite-tsconfig-paths": "6.1.1",
     "vitest": "4.0.18"
   },
   "dependencies": {
